<resources>
	<string name="app_name">MMUOne</string>
	<string name="studentID">Student ID</string>
	<string name="password">Password</string>
	<string name="login">Log In</string>
	<string name="register">Register</string>
	<string name="passwordShowHide">Show or hide password</string>
	<string name="logInToSignUpIcon">Sign up icon</string>
	<string name="logInToSignUp">Don\'t have an account? Sign up here</string>
	<string name="signUptoLogInIcon">Log in icon</string>
	<string name="signUptoLogIn">Already have an account? Sign in here</string>
	<string name="personalEmail">Personal E-mail</string>
	<string name="fullName">Full Name</string>
	<string name="faculty">Faculty</string>
	<string name="forgotPassword">Forgot Password?</string>
	<string name="recoverPassword">Recover Password</string>
	<item name="visible" type="id"/>
	<item name="masked" type="id"/>
	<string name="title_activity_main">MainActivity</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
</resources>
