<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollview"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:fillViewport="true"
	tools:context="club.itsociety.mmuone.LogInActivity">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraintlayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/gradient_list"
		android:orientation="vertical"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="20dp"
		android:paddingBottom="20dp"
		android:layout_margin="0dp"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:clickable="true">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_studentID"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="138dp"
			android:layout_marginRight="16dp"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginLeft="16dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:textColorHint="#585A54">

			<EditText
				android:id="@+id/input_studentID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawableStart="@mipmap/icons8_user_100"
				android:drawablePadding="10dp"
				android:hint="@string/studentID"
				android:maxLines="1"
				android:inputType="numberSigned"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="16dp"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginLeft="16dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/input_layout_studentID"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			app:passwordToggleContentDescription="@string/passwordShowHide"
			app:passwordToggleEnabled="false"
			app:passwordToggleTint="#5A5654"
			android:textColorHint="#585A54">

			<EditText
				android:id="@+id/input_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawableStart="@mipmap/icons8_password_100"
				android:drawablePadding="10dp"
				android:hint="@string/password"
				android:inputType="textPassword"/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btn_login"
			android:layout_width="308dp"
			android:layout_height="wrap_content"
			android:background="@drawable/buttons"
			android:text="@string/login"
			android:textColor="@android:color/white"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:clickable="true"
			android:layout_marginLeft="16dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginRight="16dp"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginEnd="16dp"
			app:layout_constraintHorizontal_bias="0.48"
			android:layout_marginTop="54dp"
			app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
			android:layout_marginStart="16dp"/>


		<ImageView
			android:id="@+id/signUpIcon"
			android:layout_width="18dp"
			android:layout_height="18dp"
			android:src="@mipmap/icons8_registration"
			app:layout_constraintRight_toLeftOf="@+id/signUpText"
			app:layout_constraintTop_toBottomOf="@+id/btn_login"
			android:layout_marginRight="6dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="6dp"/>

		<TextView
			android:id="@+id/signUpText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/logInToSignUp"
			android:textAlignment="center"
			android:textColor="#2E2E2B"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginTop="24dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:layout_marginStart="16dp"
			android:textSize="7pt"
			android:textStyle="normal"
			android:gravity="center_vertical"
			app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

	</android.support.constraint.ConstraintLayout>

</ScrollView>
