<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:fillViewport="true"
	tools:context="club.itsociety.mmuone.ForgotPassword">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/gradient_list"
		android:orientation="vertical"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="20dp"
		android:paddingBottom="20dp"
		android:layout_margin="0dp"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:clickable="true">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_fullName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginTop="158dp"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:textAlignment="center"
			android:gravity="center_horizontal"
			android:textColorHint="@color/textColor">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_fullName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawableStart="@mipmap/icons8_user_100"
				android:drawablePadding="10dp"
				android:hint="@string/fullName"
				android:maxLines="1"
				android:inputType="textPersonName"
				android:maxLength="50"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_studentID"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/input_layout_fullName"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginTop="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:textAlignment="center"
			android:gravity="center_horizontal"
			android:textColorHint="@color/textColor">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_studentID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawableStart="@mipmap/icons8_id_card"
				android:drawablePadding="10dp"
				android:hint="@string/studentID"
				android:maxLines="1"
				android:inputType="numberSigned"
				android:maxLength="15"/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btn_forgotPassword"
			android:layout_width="308dp"
			android:layout_height="wrap_content"
			android:background="@drawable/buttons"
			android:text="@string/recoverPassword"
			android:textColor="@color/textColor"
			android:layout_marginLeft="16dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginRight="16dp"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="52dp"
			app:layout_constraintTop_toBottomOf="@+id/input_layout_studentID"
			android:layout_marginStart="16dp"/>

	</android.support.constraint.ConstraintLayout>

</ScrollView>
